feat: add notification, projects section, blogs section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 
 <body>
   <div class="w-1/2 mx-auto my-16">
-    <header class="mb-4">
+    <div
+      class="p-4 bg-amber-300 text-slate-700 text-sm font-medium text-center mb-8 border border-amber-500 rounded-md">
+      Exciting things are brewing! This site is still under development. Thank you for your patience and stay tuned for
+      more.
+    </div>
+    <header class="mb-8">
       <!-- title and description -->
       <div class="mb-4">
         <h1 class="text-3xl font-bold text-dark mb-3">👋 Hi there, it's Frisco!</h1>
@@ -54,9 +59,32 @@
     </header>
 
     <!-- projects -->
-    <section>
-
+    <section class="mb-8">
+      <h3 class="text-xl font-bold mb-4">Projects</h3>
+      <div class="space-y-2">
+        <div class="bg-white p-4 border border-slate-300 rounded-md shadow-md">
+          <h4 class="text-md font-medium"><i class="fa-brands fa-js text-amber-300"></i> express-api</h4>
+        </div>
+        <div class="bg-white p-4 border border-slate-300 rounded-md shadow-md">
+          <h4 class="text-md font-medium"><i class="fa-brands fa-golang text-sky-400"></i> golang-api</h4>
+        </div>
+      </div>
     </section>
+
+    <!-- blogs -->
+    <section class="mb-8">
+      <h3 class="text-xl font-bold mb-4">Blogs</h3>
+      <div class="space-y-2">
+        <div class="bg-white p-4 border border-slate-300 rounded-md shadow-md">
+          <h4 class="text-md font-medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
+        </div>
+        <div class="bg-white p-4 border border-slate-300 rounded-md shadow-md">
+          <h4 class="text-md font-medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
+        </div>
+      </div>
+    </section>
+
+
   </div>
 </body>
 
