feat: set target _blank for instagram button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <i class="fa-brands fa-linkedin"></i>
           <span>LinkedIn</span>
         </a>
-        <a href="https://www.instagram.com/fnp.dev/"
+        <a href="https://www.instagram.com/fnp.dev/" target="_blank"
           class="py-2 px-4 bg-slate-50 text-sm font-bold text-dark rounded-md shadow-md hover:bg-fuchsia-700 hover:text-white transition-colors duration-300 ease-in-out">
           <i class="fa-brands fa-instagram"></i>
           <span>Instagram</span>
